--- a/MP.BucketStore/MP.BucketStore.csproj
+++ b/MP.BucketStore/MP.BucketStore.csproj
@@ -11,6 +11,7 @@
     <RepositoryUrl>https://github.com/mparker42/MP.BucketStore</RepositoryUrl>
     <PackageLicenseExpression>MIT-0</PackageLicenseExpression>
     <Copyright>Martin Parker</Copyright>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
