--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Pack
       run: dotnet pack --configuration Release
     - name: Publish
-      run: dotnet nuget push */bin/Release/*.nupkg
+      run: dotnet nuget push */bin/Release/*.nupkg -s https://api.nuget.org/v3/index.json
