--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,11 +18,9 @@ jobs:
       with:
         dotnet-version: 6.0.x
         include-prerelease: true
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.NUGET_API_KEY}}
     - name: Build
       run: dotnet build --configuration Release
     - name: Pack
       run: dotnet pack --configuration Release
     - name: Publish
-      run: dotnet nuget push */bin/Release/*.nupkg -s https://api.nuget.org/v3/index.json
+      run: dotnet nuget push */bin/Release/*.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}}
