--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
         include-prerelease: true
-    - name: Pack
-      run: dotnet pack --configuration Release -p:PackageVersion=1.0.${{ github.run_number }}
+    - name: Build
+      run: dotnet build --configuration Release -p:PackageVersion=1.0.${{ github.run_number }}
     - name: Publish
       run: dotnet nuget push */bin/Release/*.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}}
